tests/errors/se_nestdef.pyx
def f():
	def g():
		pass
_ERRORS = u"""
2:1: def statement not allowed here
"""
